// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfirmationModal > matches snapshot when closed 1`] = `
<DocumentFragment>
  .c3 {
  transform: scale(1);
}

.c2 {
  z-index: 1;
  height: 24px;
  width: 24px;
  color: currentColor;
  word-spacing: 0;
  vertical-align: middle;
}

.c2:not(:root) {
  overflow: visible;
}

.c5 {
  z-index: 1;
  height: 144px;
  width: 144px;
  color: white;
  word-spacing: 0;
  vertical-align: middle;
}

.c5:not(:root) {
  overflow: visible;
}

.c9 {
  box-sizing: border-box;
  user-select: none;
  font-family: Metropolis,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: all 0.3s ease;
  background-color: rgb(255, 255, 255);
  border-color: hsl(0, 0%, 94%);
  border-top-color: hsl(0, 0%, 100%);
  border-bottom-color: hsl(0, 0%, 82%);
  color: rgb(0, 0, 0);
  font-size: 14px;
  border-radius: 3px;
  padding: 1.4px 4px;
  flex-direction: row;
}

.c9:hover {
  transition: all 0.1s ease;
}

.c9:focus,
.c9:active {
  transition: all 0 ease;
}

.c9 >* {
  flex: 0 1 auto;
}

.c9:active {
  transition-duration: 0s;
  background-color: hsl(0, 0%, 92.5%);
  border-color: hsl(0, 0%, 87%);
  border-top-color: hsl(0, 0%, 95.3%);
  border-bottom-color: hsl(0, 0%, 75.8%);
  color: hsl(0, 0%, 0%);
}

.c9:hover {
  background-color: hsl(0, 0%, 98.5%);
  border-color: hsl(0, 0%, 92.6%);
  border-top-color: hsl(0, 0%, 100%);
  border-bottom-color: hsl(0, 0%, 80.8%);
  color: hsl(0, 0%, 0%);
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c9[disabled],
.c9[disabled]:hover,
.c9[disabled]:focus,
.c9[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: hsl(0, 0%, 94%);
  border-color: hsl(0, 0%, 94%);
  color: hsl(0, 0%, 0%);
}

.c9 >svg {
  width: 24px;
  height: 24px;
}

.c9 >:not(:first-child) {
  margin-left: 4px;
  flex-basis: auto;
}

.c10 {
  box-sizing: border-box;
  user-select: none;
  font-family: Metropolis,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: all 0.3s ease;
  background-color: rgb(228, 0, 0);
  border-color: rgb(220, 0, 0);
  border-top-color: rgb(231, 4, 4);
  border-bottom-color: rgb(203, 0, 0);
  color: rgb(255, 255, 255);
  font-size: 14px;
  border-radius: 3px;
  padding: 1.4px 4px;
  flex-direction: row;
}

.c10:hover {
  transition: all 0.1s ease;
}

.c10:focus,
.c10:active {
  transition: all 0 ease;
}

.c10 >* {
  flex: 0 1 auto;
}

.c10:active {
  transition-duration: 0s;
  background-color: rgb(218, 0, 0);
  border-color: rgb(212, 0, 0);
  border-top-color: rgb(222, 3, 3);
  border-bottom-color: rgb(195, 0, 0);
  color: hsl(0, 0%, 92.5%);
}

.c10:hover {
  background-color: rgb(226, 0, 0);
  border-color: rgb(219, 0, 0);
  border-top-color: rgb(229, 4, 4);
  border-bottom-color: rgb(202, 0, 0);
  color: hsl(0, 0%, 98.5%);
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c10[disabled],
.c10[disabled]:hover,
.c10[disabled]:focus,
.c10[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: hsl(0, 0%, 41.9%);
  border-color: hsl(0, 0%, 41.9%);
  color: hsl(0, 0%, 94%);
}

.c10 >svg {
  width: 24px;
  height: 24px;
}

.c10 >:not(:first-child) {
  margin-left: 4px;
  flex-basis: auto;
}

.c8 {
  display: flex;
  flex: 0 0 auto;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
}

.c1 {
  cursor: pointer;
  height: 24px;
  position: absolute;
  right: 16px;
  top: 16px;
  transition: all 0.3s ease;
  width: 24px;
}

.c1:hover,
.c1:focus {
  transform: scale(1.25);
  transition: all 0.1s ease;
}

.c1:active {
  transform: scale(1.1);
  transition: all 0;
}

.c6 {
  margin: 0;
  text-align: center;
}

.c4 {
  align-items: center;
  display: flex;
  flex: 1 1 100%;
  flex-direction: column;
  justify-content: center;
}

.c4 >svg {
  margin-top: -16px;
}

.c7 {
  margin: 8px 0 0;
  text-align: center;
}

.c0 {
  display: none;
  backdrop-filter: blur(10px);
  background-color: rgba(0, 0, 0, 0.85);
  border: none;
  border-radius: 3px;
  color: rgb(242, 242, 242);
  height: 400px;
  margin: auto;
  max-height: calc(100vh - 2rem);
  max-width: calc(100vw - 2rem);
  padding: 24px;
  width: 500px;
}

.c0[open] {
  display: flex;
  flex-direction: column;
}

.c0:focus {
  outline: none;
}

.c0:focus-visible {
  outline: 2px solid rgb(242, 242, 242);
  outline-offset: 2px;
}

.c0::backdrop {
  background-color: rgba(0, 0, 0, 0.45);
}

<dialog
    aria-describedby="secondaryText"
    aria-labelledby="question"
    class="c0"
  >
    <span
      class="c1"
      data-testid="confirmation-modal-cancel-x"
    >
      <svg
        aria-hidden="true"
        class="c2"
        focusable="false"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <g
          class="c3"
          fill="currentColor"
          title=""
        >
          <g
            class="glyph"
            fill="currentColor"
            transform="translate(0 0) scale(1)"
          >
            <path
              d="M12,10.9528132 L6.76406623,5.71687948 C6.47489359,5.42770684 6.00605212,5.42770684 5.71687948,5.71687948 C5.42770684,6.00605212 5.42770684,6.47489359 5.71687948,6.76406623 L10.9528132,12 L5.71687948,17.2359338 C5.42770684,17.5251064 5.42770684,17.9939479 5.71687948,18.2831205 C6.00605212,18.5722932 6.47489359,18.5722932 6.76406623,18.2831205 L12,13.0471868 L17.2359338,18.2831205 C17.5251064,18.5722932 17.9939479,18.5722932 18.2831205,18.2831205 C18.5722932,17.9939479 18.5722932,17.5251064 18.2831205,17.2359338 L13.0471868,12 L18.2831205,6.76406623 C18.5722932,6.47489359 18.5722932,6.00605212 18.2831205,5.71687948 C17.9939479,5.42770684 17.5251064,5.42770684 17.2359338,5.71687948 L12,10.9528132 Z"
              id="Combined-Shape"
            />
          </g>
        </g>
      </svg>
    </span>
    <div
      class="c4"
    >
      <svg
        aria-hidden="true"
        class="c5"
        focusable="false"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <g
          class="iconBackground"
          fill="hsla(0, 100%, 42.5%, 0.8)"
          fill-opacity="1"
          fill-rule="evenodd"
          id="TriangleSmall"
        >
          <path
            d="M12.8468583,4.36325889 L20.9902272,17.4723234 C21.2816549,17.9414591 21.1375941,18.5580176 20.6684584,18.8494453 C20.5100456,18.9478516 20.3272715,19 20.1407818,19 L3.80424764,19 C3.25196289,19 2.80424764,18.5522847 2.80424764,18 C2.80424764,17.8125803 2.85691709,17.6289327 2.95624934,17.4700011 L11.1494146,4.36093656 C11.442125,3.89260003 12.0590754,3.75022687 12.5274119,4.0429372 C12.6569646,4.12390762 12.7662427,4.23348515 12.8468583,4.36325889 Z"
            id="Background"
          />
        </g>
        <g
          class="c3"
          fill="currentColor"
          title=""
        >
          <g
            class="glyph"
            fill="currentColor"
            transform="translate(0 0) scale(1)"
          >
            <path
              d="M11,14 L13,14 L13,16 L11,16 L11,14 Z M11,9 L13,9 L13,11.0070282 L12.5,13 L11.5,13 L11,11.0070282 L11,9 Z"
              id="Exclamation"
            />
          </g>
        </g>
      </svg>
      <h2
        class="c6"
        id="question"
      >
        Will this test pass?
      </h2>
      <p
        class="c7"
        id="secondaryText"
      >
        Only time will tell
      </p>
    </div>
    <div
      class="c8"
    >
      <button
        class="c9"
        title="Cancel"
      >
        <span>
          Cancel
        </span>
      </button>
      <button
        class="c10"
        title="Confirm"
        type="danger"
      >
        <span>
          Confirm
        </span>
      </button>
    </div>
  </dialog>
</DocumentFragment>
`;

exports[`ConfirmationModal > matches snapshot when open 1`] = `
<DocumentFragment>
  .c3 {
  transform: scale(1);
}

.c2 {
  z-index: 1;
  height: 24px;
  width: 24px;
  color: currentColor;
  word-spacing: 0;
  vertical-align: middle;
}

.c2:not(:root) {
  overflow: visible;
}

.c5 {
  z-index: 1;
  height: 144px;
  width: 144px;
  color: white;
  word-spacing: 0;
  vertical-align: middle;
}

.c5:not(:root) {
  overflow: visible;
}

.c9 {
  box-sizing: border-box;
  user-select: none;
  font-family: Metropolis,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: all 0.3s ease;
  background-color: rgb(255, 255, 255);
  border-color: hsl(0, 0%, 94%);
  border-top-color: hsl(0, 0%, 100%);
  border-bottom-color: hsl(0, 0%, 82%);
  color: rgb(0, 0, 0);
  font-size: 14px;
  border-radius: 3px;
  padding: 1.4px 4px;
  flex-direction: row;
}

.c9:hover {
  transition: all 0.1s ease;
}

.c9:focus,
.c9:active {
  transition: all 0 ease;
}

.c9 >* {
  flex: 0 1 auto;
}

.c9:active {
  transition-duration: 0s;
  background-color: hsl(0, 0%, 92.5%);
  border-color: hsl(0, 0%, 87%);
  border-top-color: hsl(0, 0%, 95.3%);
  border-bottom-color: hsl(0, 0%, 75.8%);
  color: hsl(0, 0%, 0%);
}

.c9:hover {
  background-color: hsl(0, 0%, 98.5%);
  border-color: hsl(0, 0%, 92.6%);
  border-top-color: hsl(0, 0%, 100%);
  border-bottom-color: hsl(0, 0%, 80.8%);
  color: hsl(0, 0%, 0%);
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c9[disabled],
.c9[disabled]:hover,
.c9[disabled]:focus,
.c9[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: hsl(0, 0%, 94%);
  border-color: hsl(0, 0%, 94%);
  color: hsl(0, 0%, 0%);
}

.c9 >svg {
  width: 24px;
  height: 24px;
}

.c9 >:not(:first-child) {
  margin-left: 4px;
  flex-basis: auto;
}

.c10 {
  box-sizing: border-box;
  user-select: none;
  font-family: Metropolis,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: all 0.3s ease;
  background-color: rgb(228, 0, 0);
  border-color: rgb(220, 0, 0);
  border-top-color: rgb(231, 4, 4);
  border-bottom-color: rgb(203, 0, 0);
  color: rgb(255, 255, 255);
  font-size: 14px;
  border-radius: 3px;
  padding: 1.4px 4px;
  flex-direction: row;
}

.c10:hover {
  transition: all 0.1s ease;
}

.c10:focus,
.c10:active {
  transition: all 0 ease;
}

.c10 >* {
  flex: 0 1 auto;
}

.c10:active {
  transition-duration: 0s;
  background-color: rgb(218, 0, 0);
  border-color: rgb(212, 0, 0);
  border-top-color: rgb(222, 3, 3);
  border-bottom-color: rgb(195, 0, 0);
  color: hsl(0, 0%, 92.5%);
}

.c10:hover {
  background-color: rgb(226, 0, 0);
  border-color: rgb(219, 0, 0);
  border-top-color: rgb(229, 4, 4);
  border-bottom-color: rgb(202, 0, 0);
  color: hsl(0, 0%, 98.5%);
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c10[disabled],
.c10[disabled]:hover,
.c10[disabled]:focus,
.c10[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: hsl(0, 0%, 41.9%);
  border-color: hsl(0, 0%, 41.9%);
  color: hsl(0, 0%, 94%);
}

.c10 >svg {
  width: 24px;
  height: 24px;
}

.c10 >:not(:first-child) {
  margin-left: 4px;
  flex-basis: auto;
}

.c8 {
  display: flex;
  flex: 0 0 auto;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
}

.c1 {
  cursor: pointer;
  height: 24px;
  position: absolute;
  right: 16px;
  top: 16px;
  transition: all 0.3s ease;
  width: 24px;
}

.c1:hover,
.c1:focus {
  transform: scale(1.25);
  transition: all 0.1s ease;
}

.c1:active {
  transform: scale(1.1);
  transition: all 0;
}

.c6 {
  margin: 0;
  text-align: center;
}

.c4 {
  align-items: center;
  display: flex;
  flex: 1 1 100%;
  flex-direction: column;
  justify-content: center;
}

.c4 >svg {
  margin-top: -16px;
}

.c7 {
  margin: 8px 0 0;
  text-align: center;
}

.c0 {
  display: none;
  backdrop-filter: blur(10px);
  background-color: rgba(0, 0, 0, 0.85);
  border: none;
  border-radius: 3px;
  color: rgb(242, 242, 242);
  height: 400px;
  margin: auto;
  max-height: calc(100vh - 2rem);
  max-width: calc(100vw - 2rem);
  padding: 24px;
  width: 500px;
}

.c0[open] {
  display: flex;
  flex-direction: column;
}

.c0:focus {
  outline: none;
}

.c0:focus-visible {
  outline: 2px solid rgb(242, 242, 242);
  outline-offset: 2px;
}

.c0::backdrop {
  background-color: rgba(0, 0, 0, 0.45);
}

<dialog
    aria-describedby="secondaryText"
    aria-labelledby="question"
    class="c0"
    open=""
  >
    <span
      class="c1"
      data-testid="confirmation-modal-cancel-x"
    >
      <svg
        aria-hidden="true"
        class="c2"
        focusable="false"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <g
          class="c3"
          fill="currentColor"
          title=""
        >
          <g
            class="glyph"
            fill="currentColor"
            transform="translate(0 0) scale(1)"
          >
            <path
              d="M12,10.9528132 L6.76406623,5.71687948 C6.47489359,5.42770684 6.00605212,5.42770684 5.71687948,5.71687948 C5.42770684,6.00605212 5.42770684,6.47489359 5.71687948,6.76406623 L10.9528132,12 L5.71687948,17.2359338 C5.42770684,17.5251064 5.42770684,17.9939479 5.71687948,18.2831205 C6.00605212,18.5722932 6.47489359,18.5722932 6.76406623,18.2831205 L12,13.0471868 L17.2359338,18.2831205 C17.5251064,18.5722932 17.9939479,18.5722932 18.2831205,18.2831205 C18.5722932,17.9939479 18.5722932,17.5251064 18.2831205,17.2359338 L13.0471868,12 L18.2831205,6.76406623 C18.5722932,6.47489359 18.5722932,6.00605212 18.2831205,5.71687948 C17.9939479,5.42770684 17.5251064,5.42770684 17.2359338,5.71687948 L12,10.9528132 Z"
              id="Combined-Shape"
            />
          </g>
        </g>
      </svg>
    </span>
    <div
      class="c4"
    >
      <svg
        aria-hidden="true"
        class="c5"
        focusable="false"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <g
          class="iconBackground"
          fill="hsla(0, 100%, 42.5%, 0.8)"
          fill-opacity="1"
          fill-rule="evenodd"
          id="TriangleSmall"
        >
          <path
            d="M12.8468583,4.36325889 L20.9902272,17.4723234 C21.2816549,17.9414591 21.1375941,18.5580176 20.6684584,18.8494453 C20.5100456,18.9478516 20.3272715,19 20.1407818,19 L3.80424764,19 C3.25196289,19 2.80424764,18.5522847 2.80424764,18 C2.80424764,17.8125803 2.85691709,17.6289327 2.95624934,17.4700011 L11.1494146,4.36093656 C11.442125,3.89260003 12.0590754,3.75022687 12.5274119,4.0429372 C12.6569646,4.12390762 12.7662427,4.23348515 12.8468583,4.36325889 Z"
            id="Background"
          />
        </g>
        <g
          class="c3"
          fill="currentColor"
          title=""
        >
          <g
            class="glyph"
            fill="currentColor"
            transform="translate(0 0) scale(1)"
          >
            <path
              d="M11,14 L13,14 L13,16 L11,16 L11,14 Z M11,9 L13,9 L13,11.0070282 L12.5,13 L11.5,13 L11,11.0070282 L11,9 Z"
              id="Exclamation"
            />
          </g>
        </g>
      </svg>
      <h2
        class="c6"
        id="question"
      >
        Will this test pass?
      </h2>
      <p
        class="c7"
        id="secondaryText"
      >
        Only time will tell
      </p>
    </div>
    <div
      class="c8"
    >
      <button
        class="c9"
        title="Cancel"
      >
        <span>
          Cancel
        </span>
      </button>
      <button
        class="c10"
        title="Confirm"
        type="danger"
      >
        <span>
          Confirm
        </span>
      </button>
    </div>
  </dialog>
</DocumentFragment>
`;
